C++ command-line parsing with boost

--- a/camera/c_plus_plus/CMakeLists.txt
+++ b/camera/c_plus_plus/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.4)
 project( camera )
+FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( camera color_tracker.cpp )
+TARGET_LINK_LIBRARIES(camera ${Boost_LIBRARIES})
 target_link_libraries( camera ${OpenCV_LIBS} )
