UDP and TCP sample code for connecting to PTZCamera, and primary class definitions

--- a/camera/c_plus_plus/CMakeLists.txt
+++ b/camera/c_plus_plus/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.4)
 project( camera )
-FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
+FIND_PACKAGE(Boost COMPONENTS program_options system filesystem REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( camera color_tracker.cpp )
-TARGET_LINK_LIBRARIES(camera ${Boost_LIBRARIES})
-target_link_libraries( camera ${OpenCV_LIBS} )
+add_executable( camera_controls camera_controls.cpp )
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
+TARGET_LINK_LIBRARIES(camera_controls ${Boost_LIBRARIES})
+target_link_libraries( camera_controls ${OpenCV_LIBS} )
